react-app/src/components/AppUI/Content/Content.css
.main {
	position: relative;
	display: grid;
	grid-template-rows: 75px 1fr;
	grid-template-areas:
	"header"
	"main";
	height: 100%;
	width: 100%;
}

.main__header {
	grid-area: header;
	width: 100%;
	height: 75px;
	display: flex;
	padding: 18px;
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
	background: #fff;
	justify-content: space-between;
}

.main__channel-members {
	display: flex;
	flex-direction: column;
	width: 150px;
	color: rgb(26, 26, 26);
	margin-right: 12px;
}

.main__channel-members .fas {
	margin-right: 10px;
}

.main__channel-members i,
.main_channel-members-h3 {
	font-size: 14px;
}

.main__h3 {
	margin-bottom: 1rem;
	font-size: 1rem;
	font-weight: 900;
	color: rgb(26, 26, 26);
}
.main__content {
	position: absolute;
	grid-area: main;

	padding-bottom: 180px;

	height: 100%;
	width: 100%;

}

.main__chat {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column-reverse;
	overflow-y: auto;
	overflow-x: wrap;
	word-wrap: break-word;
}

.main__chat-item {
	display: flex;
	margin-top: 10px;
	position: relative;
	padding: 5px;
	width: 100%;
	overflow-x: wrap;
}

.main__chat-item-edit-delete {
	display: flex;
	margin-top: 10px;
	position: relative;
	padding: 5px;
	background-color: wheat;
}

.main__chat-item:hover {
	background-color: whitesmoke;
}

.main__chat-item:hover .chat__extra-options{
	display: flex;
}

.chat__avatar {
	width: 44px;
	border-radius: 5px;
	margin-right: 10px;
}

.chat__username {
	color: #000;
	font-size: 16px;
	font-weight: bold;
}
.chat__date {
	color: rgb(99, 99, 99);
	font-size: 13px;
	margin-left: 20px;
}

.chat__other-text{
	width: 100%;
}
.chat__text {
	box-sizing: border-box;
	font-size: 16px;
	margin: 0;
	overflow-x: break-word;
	width: 100%;
}

.chat__text--link {
	color: rgb(57, 113, 187);
	font-size: 16px;
}

.chat__extra-options{
	position: absolute;
	top: -10px;
	right: 10px;
	display: none;
	border: 1px solid lightgray;
	border-radius: 5px;
	background-color: white;
}

.chat_edit-btn,
.chat__delete-btn{
	font-size: 17px;
	margin: 5px;
	color: grey;
}

.chat__edit button:hover,
.chat__delete button:hover{
	color: black;
}

.chat__username:hover,
.chat__date:hover {
	text-decoration: underline;
	cursor: pointer;
}

.my-editing-area {
	height: 90px;
}

.main__chat-textarea {
	position: absolute;
	box-sizing: border-box;
	bottom: 10px;
	height: 135px;
	width: 97.5%;
	background-color: white;
	margin: 10px;
}

.main__chat-send {
	background-color: #4a154b;
	color: #fff;
	width: 35px;
	height: 35px;
	bottom: 10px;
	right: 10px;
	border-radius: 50%;
	transition: all 1s;
	position: absolute;
}

.main__chat-send i {
	margin-left: 25%;
}

.main__chat-send:hover {
	background-color: #681e69;
}

.chat__quill{
	background-color: white;
}

.chat__other-info{
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: 20px 1fr;
	width: 100%;
}

.chat__other-header{
	display: flex;
	align-items: center;
}

.chat__other-info-delete-alert{
	font-weight: bold;
	font-size: 15px;
	color: grey;
}

.chat__other-info-delete-message{
	font-weight: bold;
	color: #4a154b;
}

.chat__other-info-cancel{
	border-radius: 3px;
	background-color: white;
	color: black;
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: bold;
	margin: 5px;
	padding: 5px;
	border-radius: 5px;
	outline: 0;
	border: none;
	transition: all 1s;
	text-align: center;
}

.chat__other-info-confirm{
	border-radius: 3px;
	background-color: green;
	color: #fff;
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: bold;
	margin: 5px;
	padding: 5px;
	border-radius: 5px;
	outline: 0;
	border: none;
	transition: all 1s;
	text-align: center;
}

